--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "team \"SHIfT CODERS\"",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "firebase": "^7.10.0",
+    "firebase-admin": "^8.9.2"
   }
 }
